syntax = "proto3";

package code.code;
option go_package = "github.com/CyberAgent/mimosa-code/proto/code";

/**
 * Entity
 **/

// CodeDataSource
message CodeDataSource {
  uint32 code_data_source_id = 1;
  string name = 2;
  string description = 3;
  float max_score = 4;
  int64 created_at = 5;
  int64 updated_at = 6;
}

// Gitleaks
message Gitleaks {
  uint32 gitleaks_id = 1;
  uint32 code_data_source_id = 2;
  string name = 3;
  uint32 project_id = 4;
  Type type = 5;
  string target_resource = 6;
  string repository_pattern = 7;
  string github_user = 8;
  string personal_access_token = 9;
  string gitleaks_config = 10;
  Status status = 11;
  string status_detail = 12;
  int64 scan_at = 13;
  int64 created_at = 14;
  int64 updated_at = 15;
}

// Type
enum Type {
  UNKNOWN_TYPE = 0;
  ENTERPRISE = 1;
  ORGANIZATION = 2;
  USER = 3;
}

// Status
enum Status {
  UNKNOWN = 0;
  OK = 1;
  CONFIGURED = 2;
  NOT_CONFIGURED = 3;
  ERROR = 4;
}

// GitleaksForUpsert
message GitleaksForUpsert {
  string name = 1; // Unique key for Gitleaks entity.
  uint32 project_id = 2;
  Type type = 3;
  string target_resource = 4;
  string repository_pattern = 5;
  string github_user = 6;
  string personal_access_token = 7;
  string gitleaks_config = 8;
  Status status = 9;
  string status_detail = 10;
  int64 scan_at = 11;
}
